--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -3,4 +3,5 @@
         android:title="@string/menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/mn_config" android:title="@string/menu_settings" android:menuCategory="container"></item>
 </menu>
