--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,8 @@
 <resources>
-
-    <style name="AppTheme" parent="android:Theme" />
+	<color name="color_bg_app">#ffffff</color>
+    <style name="AppTheme" parent="android:Theme.Light" >
+        <item name="android:windowBackground">@color/color_bg_app</item>
+        <item name="android:colorBackground">@color/color_bg_app</item>
+    </style>
 
 </resources>
